<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_gray">

        <Button
            android:id="@+id/viewExerciseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_combo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weightCombo"
            style="@style/Widget.AppTheme.Button"/>

        <TextView
            android:id="@+id/workoutName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/combo_label"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/ComponentLabel"/>

        <TextView
            android:id="@+id/numberExercisesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/include_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/workoutName"
            style="@style/BodyText"/>

        <TextView
            android:id="@+id/comboLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight_combo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numberExercisesLabel"
            style="@style/BodyText"/>

        <TextView
            android:id="@+id/weightCombo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/comboLabel"
            style="@style/BodyText"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>