<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context="fragments.ExerciseFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/upperGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.125" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/middleGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/middleCombinationGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.62" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/middleSpinerGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.27" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.20" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.80" />

    <TextView
        android:id="@+id/newExerciseLabel"
        style="@style/HeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_exercise"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/upperGuide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameExerciseLabel"
        style="@style/ComponentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_name_exercise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/upperGuide" />

    <EditText
        android:id="@+id/enterExerciseName"
        style="@style/CombinationLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/rightGuide"
        app:layout_constraintStart_toStartOf="@+id/leftGuide"
        app:layout_constraintTop_toBottomOf="@+id/nameExerciseLabel" />

    <Spinner
        android:id="@+id/workoutSpinner"
        style="@style/spinnerStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/rightGuide"
        app:layout_constraintStart_toStartOf="@+id/leftGuide"
        app:layout_constraintTop_toTopOf="@+id/middleSpinerGuide" />

    <TextView
        android:id="@+id/orLabel"
        style="@style/ComponentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/createNewWorkoutBut"
        app:layout_constraintEnd_toStartOf="@+id/rightGuide"
        app:layout_constraintStart_toStartOf="@+id/leftGuide"
        app:layout_constraintTop_toBottomOf="@+id/workoutSpinner" />

    <Button
        android:id="@+id/createNewWorkoutBut"
        style="@style/Widget.AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_workout"
        app:layout_constraintBottom_toTopOf="@+id/middleGuide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/createNewExerciseBut"
        style="@style/Widget.AppTheme.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_exercise"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/combinationExerciseLabel"
        style="@style/ComponentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/combination"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/middleCombinationGuide" />

    <TextView
        android:id="@+id/combosForExercise"
        style="@style/CombinationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:text="@string/placeholder"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/combinationExerciseLabel" />
</androidx.constraintlayout.widget.ConstraintLayout>