<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="fragments.WorkoutFragment"
    android:background="@color/light_gray">

    <TextView
        android:id="@+id/listWorkoutsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_of_workouts"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/HeaderText"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/workoutRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/deleteAllButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createNewWorkoutButton"
        android:background="@color/light_gray"/>

    <Button
        android:id="@+id/deleteAllButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delete_all"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.AppTheme.Button"/>

    <Button
        android:id="@+id/createNewWorkoutButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_new_workout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listWorkoutsLabel"
        style="@style/Widget.AppTheme.Button"/>
</androidx.constraintlayout.widget.ConstraintLayout>